Rest client implementation, Step definition creation, User and Book service implementation, Test Core configuration, Config file creation and bean via spring, example BDD
