# swagger-generated/src/main/java/org/openapitools/api/UserApi.java
@@ -1,0 +1,72 @@
+/**
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (7.5.0).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+package org.openapitools.api;
+
+import org.openapitools.model.CreateUser201Response;
+import org.openapitools.model.CreateUserRequest;
+import org.openapitools.model.User;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.*;
+import org.springframework.web.service.annotation.*;
+import org.springframework.web.multipart.MultipartFile;
+
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import jakarta.annotation.Generated;
+
+
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", comments = "Generator version: 7.5.0")
+public interface UserApi {
+
+    /**
+     * POST /users : Create a user
+     *
+     * @param createUserRequest  (required)
+     * @return User created successfully (status code 201)
+     */
+    @HttpExchange(
+        method = "POST",
+        value = "/users",
+        accept = { "application/json" },
+        contentType = "application/json"
+    )
+    ResponseEntity<CreateUser201Response> createUser(
+         @RequestBody CreateUserRequest createUserRequest
+    );
+
+
+    /**
+     * DELETE /users/{userId} : Delete a user
+     *
+     * @param userId ID of the user to delete (required)
+     * @return User deleted successfully (status code 204)
+     */
+    @HttpExchange(
+        method = "DELETE",
+        value = "/users/{userId}",
+        accept = { "application/json" }
+    )
+    ResponseEntity<Void> deleteUser(
+         @PathVariable("userId") Long userId
+    );
+
+
+    /**
+     * GET /users : Get all users
+     *
+     * @return List of users (status code 200)
+     */
+    @HttpExchange(
+        method = "GET",
+        value = "/users",
+        accept = { "application/json" }
+    )
+    ResponseEntity<List<User>> getUsers(
+        
+    );
+
+}
