# swagger/src/main/java/org/openapitools/api/BookApiApi.java
@@ -1,78 +1,0 @@
-/**
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (7.5.0).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-package org.openapitools.api;
-
-import org.openapitools.model.Book;
-import org.openapitools.model.CreateBookForUser404Response;
-import org.openapitools.model.CreateBookForUserRequest;
-import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.*;
-import org.springframework.web.service.annotation.*;
-import org.springframework.web.multipart.MultipartFile;
-
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import jakarta.annotation.Generated;
-
-
-@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", comments = "Generator version: 7.5.0")
-public interface BookApiApi {
-
-    /**
-     * POST /users/{userId}/books : Create a book for a user
-     *
-     * @param userId ID of the user to create a book for (required)
-     * @param createBookForUserRequest  (required)
-     * @return Book created successfully (status code 201)
-     *         or User not found (status code 404)
-     */
-    @HttpExchange(
-        method = "POST",
-        value = "/users/{userId}/books",
-        accept = { "application/json" },
-        contentType = "application/json"
-    )
-    ResponseEntity<Book> createBookForUser(
-         @PathVariable("userId") Long userId,
-         @RequestBody CreateBookForUserRequest createBookForUserRequest
-    );
-
-
-    /**
-     * DELETE /users/{userId}/books/{bookId} : Delete a book for a user
-     *
-     * @param userId ID of the user to delete a book from (required)
-     * @param bookId ID of the book to delete (required)
-     * @return Book deleted successfully (status code 204)
-     */
-    @HttpExchange(
-        method = "DELETE",
-        value = "/users/{userId}/books/{bookId}",
-        accept = { "application/json" }
-    )
-    ResponseEntity<Void> deleteBookForUser(
-         @PathVariable("userId") Long userId,
-         @PathVariable("bookId") Long bookId
-    );
-
-
-    /**
-     * GET /users/{userId}/books : Get all books for a user
-     *
-     * @param userId ID of the user to get books for (required)
-     * @return List of books for the user (status code 200)
-     */
-    @HttpExchange(
-        method = "GET",
-        value = "/users/{userId}/books",
-        accept = { "application/json" }
-    )
-    ResponseEntity<List<Book>> getBooksForUser(
-         @PathVariable("userId") Long userId
-    );
-
-}
